--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -1,23 +1,28 @@
 name: NPM Build and Deploy to Github Pages
+
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  workflow_dispatch:
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.5.3
 
       - name: Install and Build 🔧
         run: |
           npm ci
           npm run test -- --run
           npm run build
+        env:
+          NODE_ENV: production
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4.4.1
+        uses: JamesIves/github-pages-deploy-action@de92b5c38d655b4c7c5c5a0059c2c0e2e24b1804 # v4.4.1
         with:
           branch: gh-pages
           folder: dist
+          clean: true
