--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -12,11 +12,14 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.5.3
 
-      - name: Install and Build 🔧
-        run: |
-          npm ci
-          npm run test -- --run
-          npm run build
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test -- --run
+
+      - name: Build
+        run: npm run build
         env:
           NODE_ENV: production
 
